syntax = "proto3";
package proto;
option go_package = "code-analyser/protos/pb/plugin";

import "protos/plugin/common.proto";


service Framework {
  rpc   Detect(Input) returns (BoolOutput);
  rpc   IsFrameworkUsed(Input) returns (BoolOutput);
  rpc   PercentOfFrameworkUsed(Input) returns (FloatOutput);
}

//    protoc -I .  --proto_path=./proto    --go_out=./pb   --go-grpc_out=./pb ./proto/*.proto